[package]
name = "ethash"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
crunchy = "0.1.0"
either = "1.0.0"
ethereum-types = "0.3"
keccak-hash = { git = "https://github.com/paritytech/parity-common", rev = "9e6725385b89b38f74c1a8ffc82abdd7fa25c304" }
log = "0.4"
memmap = "0.6"
parking_lot = "0.6"
primal = "0.2.3"

[dev-dependencies]
tempdir = "0.3"

[features]
benches = []
