[package]
name = "triehash-ethereum"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trie-root helpers, ethereum style"
license = "GPL-3.0"

[dependencies]
triehash = { git = "https://github.com/paritytech/parity-common", rev = "9e6725385b89b38f74c1a8ffc82abdd7fa25c304" }
ethereum-types = "0.3"
keccak-hasher = { path = "../keccak-hasher" }